crates/rudolint-rules/tests/snapshots/rule_fixtures__rdl3042_pip_no_cache_dir_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "RDL3042",
    "help": null,
    "labels": [],
    "message": "avoid pip cache directories by using `pip install --no-cache-dir`",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 2,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 2
    },
    "severity": "warning"
  },
  {
    "code": "RDL3042",
    "help": null,
    "labels": [],
    "message": "avoid pip cache directories by using `pip install --no-cache-dir`",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 5,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 5
    },
    "severity": "warning"
  },
  {
    "code": "RDL3042",
    "help": null,
    "labels": [],
    "message": "avoid pip cache directories by using `pip install --no-cache-dir`",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 15,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 15
    },
    "severity": "warning"
  },
  {
    "code": "RDL3042",
    "help": null,
    "labels": [],
    "message": "avoid pip cache directories by using `pip install --no-cache-dir`",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 17,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 17
    },
    "severity": "warning"
  }
]
