crates/rudolint-rules/tests/snapshots/rule_fixtures__rdl3044_no_env_self_reference_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "RDL3044",
    "help": null,
    "labels": [],
    "message": "do not refer to an environment variable within the same `ENV` statement where it is defined",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 2,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 2
    },
    "severity": "error"
  },
  {
    "code": "RDL3044",
    "help": null,
    "labels": [],
    "message": "do not refer to an environment variable within the same `ENV` statement where it is defined",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 3,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 3
    },
    "severity": "error"
  },
  {
    "code": "RDL3044",
    "help": null,
    "labels": [],
    "message": "do not refer to an environment variable within the same `ENV` statement where it is defined",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 10,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 10
    },
    "severity": "error"
  }
]
