crates/rudolint-rules/tests/snapshots/rule_fixtures__rdl3046_useradd_no_log_init_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "RDL3046",
    "help": null,
    "labels": [],
    "message": "`useradd` without flag `-l` and high UID will result in excessively large image",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 2,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 2
    },
    "severity": "warning"
  },
  {
    "code": "RDL3046",
    "help": null,
    "labels": [],
    "message": "`useradd` without flag `-l` and high UID will result in excessively large image",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 3,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 3
    },
    "severity": "warning"
  },
  {
    "code": "RDL3046",
    "help": null,
    "labels": [],
    "message": "`useradd` without flag `-l` and high UID will result in excessively large image",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 4,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 4
    },
    "severity": "warning"
  },
  {
    "code": "RDL3046",
    "help": null,
    "labels": [],
    "message": "`useradd` without flag `-l` and high UID will result in excessively large image",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 5,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 5
    },
    "severity": "warning"
  },
  {
    "code": "RDL3046",
    "help": null,
    "labels": [],
    "message": "`useradd` without flag `-l` and high UID will result in excessively large image",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 10,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 10
    },
    "severity": "warning"
  }
]
