crates/rudolint-rules/tests/snapshots/rule_fixtures__rdl3047_wget_progress_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "RDL3047",
    "help": null,
    "labels": [],
    "message": "avoid wget without `--progress=dot:giga`, `-q`, or `-nv`",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 2,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 2
    },
    "severity": "info"
  },
  {
    "code": "RDL3047",
    "help": null,
    "labels": [],
    "message": "avoid wget without `--progress=dot:giga`, `-q`, or `-nv`",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 11,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 11
    },
    "severity": "info"
  }
]
