crates/rudolint-rules/tests/snapshots/rule_fixtures__rdl3048_valid_label_key_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "RDL3048",
    "help": null,
    "labels": [],
    "message": "invalid label key",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 3,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 3
    },
    "severity": "style"
  },
  {
    "code": "RDL3048",
    "help": null,
    "labels": [],
    "message": "invalid label key",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 4,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 4
    },
    "severity": "style"
  },
  {
    "code": "RDL3048",
    "help": null,
    "labels": [],
    "message": "invalid label key",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 5,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 5
    },
    "severity": "style"
  },
  {
    "code": "RDL3048",
    "help": null,
    "labels": [],
    "message": "invalid label key",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 6,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 6
    },
    "severity": "style"
  },
  {
    "code": "RDL3048",
    "help": null,
    "labels": [],
    "message": "invalid label key",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 7,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 7
    },
    "severity": "style"
  },
  {
    "code": "RDL3048",
    "help": null,
    "labels": [],
    "message": "invalid label key",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 8,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 8
    },
    "severity": "style"
  },
  {
    "code": "RDL3048",
    "help": null,
    "labels": [],
    "message": "invalid label key",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 9,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 9
    },
    "severity": "style"
  },
  {
    "code": "RDL3048",
    "help": null,
    "labels": [],
    "message": "invalid label key",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 10,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 10
    },
    "severity": "style"
  }
]
