crates/rudolint-rules/tests/snapshots/rule_fixtures__rdl3049_missing_required_labels_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "RDL3049",
    "help": null,
    "labels": [],
    "message": "Label `org.opencontainers.image.source` is missing",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 8,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 8
    },
    "severity": "info"
  }
]
