crates/rudolint-rules/tests/snapshots/rule_fixtures__rdl3050_no_superfluous_labels_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "RDL3050",
    "help": null,
    "labels": [],
    "message": "superfluous label(s) present",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 4,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 4
    },
    "severity": "info"
  },
  {
    "code": "RDL3050",
    "help": null,
    "labels": [],
    "message": "superfluous label(s) present",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 5,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 5
    },
    "severity": "info"
  }
]
